--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
 name = "purplewood"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["zephira <zephira@protonmail.com>"]
 edition = "2021"
 license = "GNU General Public License v3.0"
-repository = "https://github.com/Zephira58/purplewood/blob/main/LICENSE"
+repository = "https://github.com/Zephira58/purplewood"
 readme = "README.md"
 description = "A discord bot built with the serentiy framework on rust. To be used within a gaming community i'm a member of for ease of use."
 publish = false
 
 [dependencies]
-serenity = "0.12.0"
+serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
-sqlite = "0.33.0"
+#sqlite = "0.33.0" 
 dotenv = "0.15.0"
 
 
