--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serenity = { version = "0.12.1", default-features = false, features = ["client",
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 #sqlite = "0.33.0" 
 dotenv = "0.15.0"
+rand = "0.8.5"
