--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "purplewood"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["zephira <zephira@protonmail.com>"]
 edition = "2021"
 license = "GNU General Public License v3.0"
@@ -15,3 +15,4 @@ tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 #sqlite = "0.33.0" 
 dotenv = "0.15.0"
 rand = "0.8.5"
+self_update = "0.39.0"
