--- a/.github/workflows/rust-core.yaml
+++ b/.github/workflows/rust-core.yaml
@@ -24,6 +24,17 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
+# Runs cargo test to ensure all unit tests pass
+  unit_tests:
+    runs-on: ubuntu-latest
+    name: Testing
+    steps:
+      - uses: actions/checkout@v3
+      - name: "Test local rust"
+        uses: Kristories/cargo-test@v1.0.0
+        with:
+          manifest-path: './Cargo.toml'
   
 # Runs rust clippy for any and all suggestions
   rust-clippy-analyze:
