--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 dotenv = "0.15.0"
 rand = "0.8.5"
 self_update = "0.39.0"
+colour = "0.7.0"
