Add: Discord id support for recruit command
Closes: #7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "prnt",
         "purplewood",
         "recruiterid",
-        "rockpaper"
+        "rockpaper",
+        "steamid"
     ]
 }
